# dddd_ocr_rs

./: .gitignore  Cargo.toml  README.md  build.rs
models/: common.ncnn.param
src/: error.rs  lib.rs  rec.rs
