[package]
name = "dddd_ocr"
version = "0.1.0"
edition = "2021"
description = "dddd-ocr onnxrumtime infer"
license = "AGPL-3.0"
homepage = "https://github.com/MosRat/dddd_ocr_rs"
repository = "https://github.com/MosRat/dddd_ocr_rs"
readme = "README.md"
keywords = ["CAPTCHA", "ocr", "onnx"]

[dependencies]
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
ort = { version = "2.0.0-rc.6" }
thiserror = "1.0.56"
gif = "0.13.1"
