[package]
name = "dddd_ocr"
version = "0.1.0"
edition = "2021"
description = "dddd-ocr onnxrumtime infer"
license = "AGPL-3.0"
homepage = "https://github.com/MosRat/dddd_ocr_rs"
repository = "https://github.com/MosRat/dddd_ocr_rs"
readme = "README.md"
keywords = ["CAPTCHA", "ocr", "onnx"]
exclude = [
    "models/*.onnx",
    "models/*.params",
    "models/*.config",
]

[dependencies]
image = { version = "0.25", features = ["gif", "png"], default-features = false }
imageproc = "0.25"
ndarray = { version = "0.16", optional = true }
ort = { version = "2.0.0-rc.8", optional = true }
thiserror = "1"
gif = { version = "0.13.1" }
ncnnrs = { git = "https://github.com/MosRat/ncnnrs",version = "0.1.7", default-features = false, optional = true, branch = "main"  }
libc = { version = "0.2.161", optional = true }
anyhow = { version =  "1",optional = true }

[lints.rust]
#unsafe_code = "forbid"
warnings = "allow" # deny, warn, allow, or forbid

[features]
default = ["use-ort"]
use-ort = ["ort", "ndarray"]
use-ncnn = ["ncnnrs", "libc","anyhow"]
gpu = []

[profile.dev]
lto = false
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.


